2004-09-09 Mike Kestner <mkestner@ximian.com>

	* en/Gdk/*.xml: api updates.

2004-09-06 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Adjustment.xml
	* en/Gtk/Callback.xml
	* en/Gtk/Clipboard.xml
	* en/Gtk/Quit.xml
	* en/Gtk/ReadyEvent.xml
	* en/Gtk/ImageStockData.xml
	* en/Gtk/MovementStep.xml
	* en/Gtk/RulerMetric.xml
	* en/Gtk/Selection.xml
	* en/Gtk/ThreadNotify.xml: Docs for assorted helper classes.

2004-09-06 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ProgressBar.xml
	* en/Gtk/RadioButton.xml
	* en/Gtk/RadioMenuItem.xml
	* en/Gtk/Scrollbar.xml : Docs for assorted widgets.

2004-09-06 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/HTML.xml
	* en/Gtk/HTMLCommandType.xml
	* en/Gtk/HTMLCursorSkipType.xml : Docs related to HTML widgets.
	* en/Gtk/Button.xml
	* en/Gtk/Widget.xml
	* en/Gtk/Style.xml
	* en/Gtk/Container.xml : Docs for major components.
	
2004-09-06 Shane Landrum <epicene@pobox.com>

	* en/Gtk/CommitArgs.xml
	* en/Gtk/ConfigureEventArgs.xml
	* en/Gtk/CursorMoveArgs.xml
	* en/Gtk/CycleChildFocusArgs.xml
	* en/Gtk/DeleteRangeArgs.xml
	* en/Gtk/DirectionChangedArgs.xml
	* en/Gtk/DrawPrintArgs.xml
	* en/Gtk/EnterNotifyEventArgs.xml
	* en/Gtk/FocusChildSetArgs.xml
	* en/Gtk/FocusTabArgs.xml
	* en/Gtk/FormatValueArgs.xml
	* en/Gtk/FrameEventArgs.xml
	* en/Gtk/HierarchyChangedArgs.xml
	* en/Gtk/LeaveNotifyEventArgs.xml
	* en/Gtk/MoveArgs.xml
	* en/Gtk/MoveCurrentArgs.xml
	* en/Gtk/MoveCursorArgs.xml
	* en/Gtk/MoveFocusArgs.xml
	* en/Gtk/MoveHandleArgs.xml
	* en/Gtk/OnCommandArgs.xml
	* en/Gtk/PageHorizontallyArgs.xml
	* en/Gtk/ParentSetArgs.xml
	* en/Gtk/ScrollChildArgs.xml
	* en/Gtk/SubmitArgs.xml
	* en/Gtk/TextEventArgs.xml : Event data docs.

2004-09-04 Mike Kestner <mkestner@ximian.com>

	* Makefile.am : use the ENABLE* ACSUBSTs in make update.

2004-09-03 Mike Kestner <mkestner@ximian.com>

	* en/Gdk/Pixmap.cs : updates to sigs of FromXpm* methods.
	* en/Gtk/Init.cs : fix Check and remove AbiCheck.
	* en/Gtk/Invisible.cs : add ctor.