@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Flags for how to begin processing a chunk of HTML.</summary>
-    <remarks/>
+    <remarks>Mostly for internal use.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,7 +37,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether to scroll this chunk of HTML.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -50,7 +50,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether to process images or not.</summary>
         <remarks>
         </remarks>
       </Docs>
