@@ -1870,7 +1870,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Turn data-saving on.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -1883,7 +1883,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Turn data-saving off.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -1896,7 +1896,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether this data has been saved since the last change.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -1909,7 +1909,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether this data has been saved since the last change.</summary>
         <remarks>
         </remarks>
       </Docs>
