@@ -76,7 +76,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>A deletion.</summary>
         <remarks>
         </remarks>
       </Docs>
