@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Embeds an HTML object.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>GLib.Opaque</BaseTypeName>
@@ -61,7 +61,7 @@
       <Docs>
         <summary>To be added</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="DrawPrint">
@@ -73,7 +73,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Changed">
@@ -84,8 +84,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fired when the HTML is changed.</summary>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="DrawGdk">
@@ -97,7 +97,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Finalize">
@@ -109,7 +109,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="OnDrawPrint">
@@ -173,7 +173,7 @@
         <summary>To be added</summary>
         <param name="param">a <see cref="T:System.String" /></param>
         <returns>a <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="SetParameter">
@@ -190,7 +190,7 @@
         <summary>To be added</summary>
         <param name="param">a <see cref="T:System.String" /></param>
         <param name="value">a <see cref="T:System.String" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -228,7 +228,7 @@
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
         <returns>a <see cref="T:Gtk.HTMLEmbedded" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
