@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Enumerations for different types of etched lines.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,7 +37,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>An etched line that looks like it's lower than the surrounding pixels.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -50,7 +50,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>An etched line that looks like it's higher than the surrounding pixels.</summary>
         <remarks>
         </remarks>
       </Docs>
