@@ -134,8 +134,8 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">a <see cref="T:System.IntPtr" /></param>
+        <summary>Constructor for internal use only. Do not use.</summary>
+        <param name="raw">a <see cref="T:System.IntPtr" />, the underlying C objject.</param>
         <returns>a <see cref="T:Gtk.HTMLStream" /></returns>
         <remarks/>
       </Docs>
