@@ -1,3 +1,12 @@
+2004-09-13 Shane Landrum <epicene@pobox.com>
+
+	* en/Gtk/HTMLBeginFlags.xml
+	* en/Gtk/HTMLCommandType.xml
+	* en/Gtk/HTMLEditorEventType.xml
+	* en/Gtk/HTMLEmbedded.xml
+	* en/Gtk/HTMLEtchStyle.xml
+	* en/Gtk/HTMLStream.xml: Docs for HTML-related classes.
+	
 2004-09-09 Mike Kestner <mkestner@ximian.com>
 
 	* en/Gdk/*.xml: api updates.
